# natural-start-zones

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/550/: 550.kml  Eagle.kml  Muleshoe.kml  Porcupine.kml  Telescope.kml
data/Sisters/: Sister_1_SZ.kml  Sister_2_SZ.kml  Sister_3_SZ.kml  Sister_4_SZ.kml  Sister_6_SZ.kml  Sisters.kml  Sisters_SZs.kml
data/Star_mtn/: Star_A.kml  Star_All.kml  Star_B.kml  Star_C.kml  Star_D.kml  Star_E.kml
data/avalanches/: CAIC_HWY_avalanches_2009-01-01_2021-05-04.csv  US_550_Avalanches.csv
data/masks/: sister_2_mask.npy  sister_3_mask.npy
docs/: terrain_analysis_report.md
figures/: seven_sisters_nucleation.kml  seven_sisters_report.txt  star_mountain_nucleation.kml  star_mountain_report.txt
src/: avl_data.py  pipeline.py  terrain_util.py
unused/: OpenLiDarLAZ.py  crop_las.py  ground_filter.json  improved_sz_analysis.py  itree_filter_pipeline.json  laz_utils.py  pipeline.json  sisters_crop_pipeline.json  util.py
